--- a/.gitignore
+++ b/.gitignore
@@ -220,7 +220,8 @@ $RECYCLE.BIN/
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
 # keys
-*.pem
+private.pem
+public.pem
 
 # csvs
 *.csv
