--- a/.gitignore
+++ b/.gitignore
@@ -219,9 +219,10 @@ $RECYCLE.BIN/
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
-# keys
-private.pem
+# keys public
 public.pem
+# keys private
+private.pem
 
 # csvs
 *.csv
